--- a/public/popup.css
+++ b/public/popup.css
@@ -1,13 +1,12 @@
 .popup-wrapper {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 1100;
     background-color: rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
