--- a/public/toast.css
+++ b/public/toast.css
@@ -13,8 +13,18 @@
   color: rgb(22, 22, 23);
   font-size: 1.5rem;
   font-weight: 700;
-  z-index: 1000;
+  z-index: 1200;
 }
+
+.toast-container {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 90%;
+  z-index: 1;
+}
+
 
 .toast-timer {
   position: absolute;
@@ -22,7 +32,7 @@
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(22, 22, 23);
   border-radius: 0 0 0.3rem 0.3rem;
   animation: toast-slider 1.3s linear;
 }
